--- a/Financier.Tester/Financier.Tester.csproj
+++ b/Financier.Tester/Financier.Tester.csproj
@@ -1,6 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.2.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.2.0" />
     <ProjectReference Include="..\Financier.Common\Financier.Common.csproj" />
   </ItemGroup>
 
