--- a/Financier.Common/Financier.Common.csproj
+++ b/Financier.Common/Financier.Common.csproj
@@ -7,6 +7,8 @@
   <ItemGroup>
     <PackageReference Include="CsvHelper" Version="12.1.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="2.2.0" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="2.2.0" />
   </ItemGroup>
 
 </Project>
