--- a/Financier.Cli/Financier.Cli.csproj
+++ b/Financier.Cli/Financier.Cli.csproj
@@ -4,6 +4,10 @@
     <ProjectReference Include="..\Financier.Common\Financier.Common.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.2.1" />
+  </ItemGroup>
+
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
