Separate the factories from the tests
`Financier.Common.Factories` is its own test project because it has a
different responsibility than `Financier.Common.Tests`

--- a/Financier.Common.Tests/Financier.Common.Tests.csproj
+++ b/Financier.Common.Tests/Financier.Common.Tests.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Financier.Common\Financier.Common.csproj" />
+    <ProjectReference Include="..\Financier.Common.Factories\Financier.Common.Factories.csproj" />
   </ItemGroup>
 
 </Project>
