--- a/Financier.Cli.Listings/Financier.Cli.Listings.csproj
+++ b/Financier.Cli.Listings/Financier.Cli.Listings.csproj
@@ -4,6 +4,11 @@
     <ProjectReference Include="..\Financier.Common\Financier.Common.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="McMaster.Extensions.CommandLineUtils" Version="2.3.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCOre.Design" Version="2.2.3" />
+  </ItemGroup>
+
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.2</TargetFramework>
