--- a/Financier.Web/.gitignore
+++ b/Financier.Web/.gitignore
@@ -1,2 +1,2 @@
 node_modules
-Financier.Web/wwwroot/css/Areas/Expenses/MyHome/GetMonthlyPayments.css
+wwwroot/css/Areas/Expenses/MyHome/GetMonthlyPayments.css
