--- a/Financier.Web.Identity/Financier.Web.Identity.csproj
+++ b/Financier.Web.Identity/Financier.Web.Identity.csproj
@@ -20,6 +20,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="3.1.8" />
   </ItemGroup>
 
 </Project>
