--- a/Financier.Web.FinancialStatements/package.json
+++ b/Financier.Web.FinancialStatements/package.json
@@ -11,15 +11,14 @@
         "node": ">=10"
     },
     "scripts": {
-        "start": "tsdx watch",
-        "build": "tsdx build",
         "test": "tsdx test --passWithNoTests",
         "lint": "tsdx lint",
-        "prepare": "tsdx build",
         "size": "size-limit",
         "analyze": "size-limit --why",
         "storybook": "start-storybook -p 6006",
         "build-storybook": "build-storybook",
+        "build-and-watch": "webpack --env mode=development",
+        "build": "webpack --env mode=production",
         "start-server": "ws --hostname=localhost --port=8001"
     },
     "peerDependencies": {
@@ -51,6 +50,8 @@
     ],
     "devDependencies": {
         "@babel/core": "^7.15.0",
+        "@babel/preset-env": "^7.15.0",
+        "@babel/preset-react": "^7.14.5",
         "@size-limit/preset-small-lib": "^5.0.3",
         "@storybook/addon-essentials": "^6.3.7",
         "@storybook/addon-info": "^5.3.21",
@@ -60,14 +61,24 @@
         "@types/react": "^17.0.19",
         "@types/react-dom": "^17.0.9",
         "babel-loader": "^8.2.2",
+        "css-loader": "^6.2.0",
+        "file-loader": "^6.2.0",
         "husky": "^7.0.2",
         "local-web-server": "^5.1.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-is": "^17.0.2",
+        "react-router-dom": "^5.2.1",
+        "sass": "^1.38.2",
+        "sass-loader": "^12.1.0",
         "size-limit": "^5.0.3",
+        "style-loader": "^3.2.1",
+        "ts-loader": "^9.2.5",
         "tsdx": "^0.14.1",
         "tslib": "^2.3.1",
-        "typescript": "^4.4.2"
-    }
+        "typescript": "^4.4.2",
+        "webpack": "^5.51.1",
+        "webpack-cli": "^4.8.0"
+    },
+    "dependencies": {}
 }
