--- a/Financier.Web.FinancialStatements/package.json
+++ b/Financier.Web.FinancialStatements/package.json
@@ -80,5 +80,9 @@
         "webpack": "^5.51.1",
         "webpack-cli": "^4.8.0"
     },
-    "dependencies": {}
+    "dependencies": {
+        "@apollo/client": "^3.4.11",
+        "d3-time-format": "^4.0.0",
+        "graphql": "^15.5.3"
+    }
 }
