--- a/Financier.Web.FinancialStatements/package.json
+++ b/Financier.Web.FinancialStatements/package.json
@@ -82,6 +82,9 @@
     },
     "dependencies": {
         "@apollo/client": "^3.4.11",
+        "@types/d3-scale": "^4.0.1",
+        "@types/d3-time-format": "^4.0.0",
+        "d3": "^7.0.2",
         "d3-time-format": "^4.0.0",
         "graphql": "^15.5.3",
         "underscore": "^1.13.1"
