--- a/Financier.Web.FinancialStatements/package.json
+++ b/Financier.Web.FinancialStatements/package.json
@@ -58,8 +58,13 @@
         "@storybook/addon-links": "^6.3.7",
         "@storybook/addons": "^6.3.7",
         "@storybook/react": "^6.3.7",
+        "@types/d3": "^7.0.0",
+        "@types/d3-format": "^3.0.1",
+        "@types/d3-scale": "^4.0.1",
+        "@types/d3-time-format": "^4.0.0",
         "@types/react": "^17.0.19",
         "@types/react-dom": "^17.0.9",
+        "@types/underscore": "^1.11.3",
         "babel-loader": "^8.2.2",
         "css-loader": "^6.2.0",
         "file-loader": "^6.2.0",
@@ -82,9 +87,8 @@
     },
     "dependencies": {
         "@apollo/client": "^3.4.11",
-        "@types/d3-scale": "^4.0.1",
-        "@types/d3-time-format": "^4.0.0",
         "d3": "^7.0.2",
+        "d3-format": "^3.0.1",
         "d3-time-format": "^4.0.0",
         "graphql": "^15.5.3",
         "underscore": "^1.13.1"
