--- a/Financier.Web.FinancialStatements/package.json
+++ b/Financier.Web.FinancialStatements/package.json
@@ -62,6 +62,7 @@
         "@types/d3-format": "^3.0.1",
         "@types/d3-scale": "^4.0.1",
         "@types/d3-time-format": "^4.0.0",
+        "@types/lodash": "^4.14.174",
         "@types/react": "^17.0.19",
         "@types/react-dom": "^17.0.9",
         "@types/underscore": "^1.11.3",
@@ -91,6 +92,7 @@
         "d3-format": "^3.0.1",
         "d3-time-format": "^4.0.0",
         "graphql": "^15.5.3",
+        "lodash": "^4.17.21",
         "underscore": "^1.13.1"
     }
 }
