I got the Line Chart (MonthlyGraph) to work!

--- a/Financier.Web.FinancialStatements/package.json
+++ b/Financier.Web.FinancialStatements/package.json
@@ -58,9 +58,10 @@
         "@storybook/addon-links": "^6.3.7",
         "@storybook/addons": "^6.3.7",
         "@storybook/react": "^6.3.7",
-        "@types/d3": "^7.0.0",
+        "@types/d3": "6.7.0",
         "@types/d3-format": "^3.0.1",
         "@types/d3-scale": "^4.0.1",
+        "@types/d3-shape": "^3.0.2",
         "@types/d3-time-format": "^4.0.0",
         "@types/lodash": "^4.14.174",
         "@types/react": "^17.0.19",
@@ -88,8 +89,9 @@
     },
     "dependencies": {
         "@apollo/client": "^3.4.11",
-        "d3": "^7.0.2",
+        "d3": "6.7.0",
         "d3-format": "^3.0.1",
+        "d3-shape": "^3.0.1",
         "d3-time-format": "^4.0.0",
         "graphql": "^15.5.3",
         "lodash": "^4.17.21",
