--- a/Financier.Web.FinancialStatements/package.json
+++ b/Financier.Web.FinancialStatements/package.json
@@ -58,7 +58,7 @@
         "@storybook/addon-links": "^6.3.7",
         "@storybook/addons": "^6.3.7",
         "@storybook/react": "^6.3.7",
-        "@types/d3": "6.7.0",
+        "@types/d3": "^7.0.0",
         "@types/d3-format": "^3.0.1",
         "@types/d3-scale": "^4.0.1",
         "@types/d3-shape": "^3.0.2",
@@ -89,7 +89,7 @@
     },
     "dependencies": {
         "@apollo/client": "^3.4.11",
-        "d3": "6.7.0",
+        "d3": "^7.1.1",
         "d3-format": "^3.0.1",
         "d3-shape": "^3.0.1",
         "d3-time-format": "^4.0.0",
