--- a/Financier.Web.FinancialStatements/package.json
+++ b/Financier.Web.FinancialStatements/package.json
@@ -19,11 +19,9 @@
         "build-storybook": "build-storybook",
         "build-and-watch": "webpack --env mode=development",
         "build": "webpack --env mode=production",
-        "start-server": "ws --hostname=localhost --port=8001"
+        "start-server": "ws --spa index.html --hostname=localhost --port=8001"
     },
-    "peerDependencies": {
-        "react": ">=16"
-    },
+    "peerDependencies": {},
     "husky": {
         "hooks": {
             "pre-commit": "tsdx lint"
@@ -72,10 +70,6 @@
         "file-loader": "^6.2.0",
         "husky": "^7.0.2",
         "local-web-server": "^5.1.1",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2",
-        "react-is": "^17.0.2",
-        "react-router-dom": "^5.2.1",
         "sass": "^1.38.2",
         "sass-loader": "^12.1.0",
         "size-limit": "^5.0.3",
@@ -95,6 +89,10 @@
         "d3-time-format": "^4.0.0",
         "graphql": "^15.5.3",
         "lodash": "^4.17.21",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "react-is": "^17.0.2",
+        "react-router-dom": "^5.3.0",
         "underscore": "^1.13.1"
     }
 }
