--- a/Financier.Web.FinancialStatements/package.json
+++ b/Financier.Web.FinancialStatements/package.json
@@ -63,6 +63,7 @@
         "@types/d3-time-format": "^4.0.0",
         "@types/lodash": "^4.14.174",
         "@types/react": "^17.0.19",
+        "@types/react-datepicker": "^4.1.7",
         "@types/react-dom": "^17.0.9",
         "@types/underscore": "^1.11.3",
         "babel-loader": "^8.2.2",
@@ -90,6 +91,7 @@
         "graphql": "^15.5.3",
         "lodash": "^4.17.21",
         "react": "^17.0.2",
+        "react-datepicker": "^4.2.1",
         "react-dom": "^17.0.2",
         "react-is": "^17.0.2",
         "react-router-dom": "^5.3.0",
