--- a/Financier.Cli/Financier.Cli.csproj
+++ b/Financier.Cli/Financier.Cli.csproj
@@ -15,6 +15,8 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
+    <LangVersion>9.0</LangVersion>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
 </Project>
