--- a/Financier.Common.Factories/Financier.Common.Factories.csproj
+++ b/Financier.Common.Factories/Financier.Common.Factories.csproj
@@ -6,6 +6,8 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <LangVersion>9.0</LangVersion>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
 </Project>
