--- a/Financier.Web.FinancialStatements/package.json
+++ b/Financier.Web.FinancialStatements/package.json
@@ -62,9 +62,11 @@
         "@types/d3-shape": "^3.0.2",
         "@types/d3-time-format": "^4.0.0",
         "@types/lodash": "^4.14.174",
+        "@types/lodash.startcase": "^4.4.6",
         "@types/react": "^17.0.19",
         "@types/react-datepicker": "^4.1.7",
         "@types/react-dom": "^17.0.9",
+        "@types/ts-nameof": "^4.2.1",
         "@types/underscore": "^1.11.3",
         "babel-loader": "^8.2.2",
         "css-loader": "^6.2.0",
@@ -76,6 +78,7 @@
         "size-limit": "^5.0.3",
         "style-loader": "^3.2.1",
         "ts-loader": "^9.2.5",
+        "ts-nameof": "^5.0.0",
         "tsdx": "^0.14.1",
         "tslib": "^2.3.1",
         "typescript": "^4.4.2",
@@ -90,6 +93,7 @@
         "d3-time-format": "^4.0.0",
         "graphql": "^15.5.3",
         "lodash": "^4.17.21",
+        "lodash.startcase": "^4.4.0",
         "react": "^17.0.2",
         "react-datepicker": "^4.2.1",
         "react-dom": "^17.0.2",
