Add more type definitions

--- a/Financier.Web.FinancialStatements/package.json
+++ b/Financier.Web.FinancialStatements/package.json
@@ -62,6 +62,10 @@
         "@types/d3-shape": "^3.0.2",
         "@types/d3-time-format": "^4.0.0",
         "@types/lodash": "^4.14.174",
+        "@types/lodash.kebabcase": "^4.1.6",
+        "@types/lodash.sortby": "^4.7.6",
+        "@types/lodash.startcase": "^4.4.6",
+        "@types/node": "^17.0.4",
         "@types/react": "^17.0.19",
         "@types/react-datepicker": "^4.1.7",
         "@types/react-dom": "^17.0.9",
