Type completions JavaScript's primitives and more
Such as `Number` and `Date`

--- a/Financier.Web.FinancialStatements/tsconfig.json
+++ b/Financier.Web.FinancialStatements/tsconfig.json
@@ -1,5 +1,7 @@
 {
   "compilerOptions": {
+    "baseUrl": "types",
+    "typeRoots": ["types"],
     "sourceMap": true,
     "target": "es5",
     "jsx": "react",
