--- a/Financier.Web.FinancialStatements/tsconfig.json
+++ b/Financier.Web.FinancialStatements/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "lib": ["es2020", "dom"],
     "baseUrl": "types",
     "typeRoots": ["types"],
     "sourceMap": true,
