--- a/Financier.Web.FinancialStatements/package.json
+++ b/Financier.Web.FinancialStatements/package.json
@@ -68,6 +68,7 @@
         "@types/react": "^17.0.19",
         "@types/react-datepicker": "^4.5.0",
         "@types/react-dom": "^17.0.9",
+        "@types/react-router-dom": "^5.3.2",
         "@types/ts-nameof": "^4.2.1",
         "@types/underscore": "^1.11.3",
         "babel-loader": "^8.2.2",
