Use SQLite; Add Financier.Web.Auth project to solution

--- a/Financier.Web.Auth/Financier.Web.Auth.csproj
+++ b/Financier.Web.Auth/Financier.Web.Auth.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
+    <LangVersion>10.0</LangVersion>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>aspnet-Financier.Web.Auth-618F616A-CAA1-419B-B031-758DAC888B4E</UserSecretsId>
