--- a/Financier.Web.FinancialStatements/package.json
+++ b/Financier.Web.FinancialStatements/package.json
@@ -66,16 +66,24 @@
     "@types/lodash.sortby": "^4.7.6",
     "@types/lodash.startcase": "^4.4.6",
     "@types/react": "^17.0.19",
-    "@types/react-datepicker": "^4.5.0",
+    "@types/react-datepicker": "^4.4.0",
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.3.2",
     "@types/ts-nameof": "^4.2.1",
     "@types/underscore": "^1.11.3",
+    "ajv": "^8.11.0",
     "babel-loader": "^8.2.2",
     "css-loader": "^6.2.0",
+    "eslint": "^8.13.0",
+    "eslint-config-react-app": "^7.0.1",
+    "eslint-plugin-flowtype": "^8.0.3",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.29.4",
     "file-loader": "^6.2.0",
     "husky": "^7.0.2",
     "local-web-server": "^5.1.1",
+    "nan": "^2.15.0",
     "sass": "^1.38.2",
     "sass-loader": "^12.1.0",
     "size-limit": "^5.0.3",
@@ -90,17 +98,38 @@
   },
   "dependencies": {
     "@apollo/client": "^3.4.11",
+    "bootstrap": "^5.1.3",
     "d3": "^7.1.1",
     "d3-format": "^3.0.1",
     "d3-shape": "^3.0.1",
     "d3-time-format": "^4.0.0",
     "graphql": "^15.5.3",
+    "http-proxy-middleware": "^2.0.4",
+    "jquery": "^3.6.0",
     "lodash": "^4.17.21",
+    "merge": "^2.1.1",
+    "oidc-client": "^1.11.5",
     "react": "^17.0.2",
-    "react-datepicker": "^4.5.0",
+    "react-datepicker": "^4.4.0",
     "react-dom": "^17.0.2",
     "react-is": "^17.0.2",
+    "react-router-bootstrap": "^0.26.1",
     "react-router-dom": "^5.3.0",
-    "underscore": "^1.13.1"
+    "react-scripts": "^5.0.1",
+    "reactstrap": "^9.0.2",
+    "rimraf": "^3.0.2",
+    "underscore": "^1.13.1",
+    "web-vitals": "^2.1.4",
+    "workbox-background-sync": "^6.5.3",
+    "workbox-broadcast-update": "^6.5.3",
+    "workbox-cacheable-response": "^6.5.3",
+    "workbox-core": "^6.5.3",
+    "workbox-expiration": "^6.5.3",
+    "workbox-google-analytics": "^6.5.3",
+    "workbox-navigation-preload": "^6.5.3",
+    "workbox-range-requests": "^6.5.3",
+    "workbox-routing": "^6.5.3",
+    "workbox-strategies": "^6.5.3",
+    "workbox-streams": "^6.5.3"
   }
 }
