--- a/Financier.Web/ClientApp/package.json
+++ b/Financier.Web/ClientApp/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "foobarauth",
+  "name": "financier",
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
@@ -7,11 +7,6 @@
     "@babel/preset-env": "^7.15.0",
     "@babel/preset-react": "^7.14.5",
     "@size-limit/preset-small-lib": "^5.0.3",
-    "@storybook/addon-essentials": "^6.3.7",
-    "@storybook/addon-info": "^5.3.21",
-    "@storybook/addon-links": "^6.3.7",
-    "@storybook/addons": "^6.3.7",
-    "@storybook/react": "^6.3.7",
     "@types/d3": "^7.0.0",
     "@types/d3-format": "^3.0.1",
     "@types/d3-scale": "^4.0.1",
@@ -21,6 +16,7 @@
     "@types/lodash.kebabcase": "^4.1.6",
     "@types/lodash.sortby": "^4.7.6",
     "@types/lodash.startcase": "^4.4.6",
+    "@types/node": "^17.0.25",
     "@types/react": "^17.0.19",
     "@types/react-datepicker": "^4.4.0",
     "@types/react-dom": "^17.0.9",
@@ -30,12 +26,6 @@
     "ajv": "^8.11.0",
     "babel-loader": "^8.2.2",
     "css-loader": "^6.2.0",
-    "eslint": "^8.13.0",
-    "eslint-config-react-app": "^7.0.1",
-    "eslint-plugin-flowtype": "^8.0.3",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-react": "^7.29.4",
     "file-loader": "^6.2.0",
     "husky": "^7.0.2",
     "local-web-server": "^5.1.1",
@@ -46,7 +36,6 @@
     "style-loader": "^3.2.1",
     "ts-loader": "^9.2.5",
     "ts-nameof": "^5.0.0",
-    "tsdx": "^0.14.1",
     "tslib": "^2.3.1",
     "typescript": "^4.4.2",
     "webpack": "^5.51.1",
@@ -69,8 +58,8 @@
     "react-datepicker": "^4.4.0",
     "react-dom": "^17.0.2",
     "react-is": "^17.0.2",
-    "react-router-bootstrap": "^0.26.1",
-    "react-router-dom": "^5.3.0",
+    "react-router-bootstrap": "^0.26.0",
+    "react-router-dom": "^6.0.0",
     "react-scripts": "^5.0.1",
     "reactstrap": "^9.0.2",
     "rimraf": "^3.0.2",
@@ -90,11 +79,13 @@
   },
   "scripts": {
     "prestart": "node aspnetcore-https && node aspnetcore-react",
-    "start": "rimraf ./build && react-scripts start",
-    "build": "react-scripts build",
+    "start": "webpack --env mode=development && ws --spa index.html --hostname=localhost --port=44458",
     "test": "cross-env CI=true react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "lint": "eslint ./src/"
+    "lint": "eslint ./src/",
+    "build-and-watch": "webpack --env mode=development",
+    "build": "webpack --env mode=production",
+    "start-server": "ws --spa index.html --hostname=localhost --port=8001"
   },
   "eslintConfig": {
     "extends": [
