--- a/Financier.Web.FinancialStatements/package.json
+++ b/Financier.Web.FinancialStatements/package.json
@@ -11,20 +11,16 @@
     "node": ">=10"
   },
   "scripts": {
-    "test": "tsdx test --passWithNoTests",
-    "lint": "tsdx lint",
     "size": "size-limit",
     "analyze": "size-limit --why",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook",
-    "build-and-watch": "webpack --env mode=development",
+    "prestart": "node aspnetcore-https && node aspnetcore-react",
+    "build-dev": "webpack --env mode=development",
     "build": "webpack --env mode=production",
-    "start-server": "ws --spa index.html --hostname=localhost --port=8001"
+    "start-server": "./start-server"
   },
   "peerDependencies": {},
   "husky": {
     "hooks": {
-      "pre-commit": "tsdx lint"
     }
   },
   "prettier": {
@@ -51,11 +47,6 @@
     "@babel/preset-env": "^7.15.0",
     "@babel/preset-react": "^7.14.5",
     "@size-limit/preset-small-lib": "^5.0.3",
-    "@storybook/addon-essentials": "^6.3.7",
-    "@storybook/addon-info": "^5.3.21",
-    "@storybook/addon-links": "^6.3.7",
-    "@storybook/addons": "^6.3.7",
-    "@storybook/react": "^6.3.7",
     "@types/d3": "^7.0.0",
     "@types/d3-format": "^3.0.1",
     "@types/d3-scale": "^4.0.1",
@@ -74,12 +65,6 @@
     "ajv": "^8.11.0",
     "babel-loader": "^8.2.2",
     "css-loader": "^6.2.0",
-    "eslint": "^8.13.0",
-    "eslint-config-react-app": "^7.0.1",
-    "eslint-plugin-flowtype": "^8.0.3",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-react": "^7.29.4",
     "file-loader": "^6.2.0",
     "husky": "^7.0.2",
     "local-web-server": "^5.1.1",
@@ -90,7 +75,6 @@
     "style-loader": "^3.2.1",
     "ts-loader": "^9.2.5",
     "ts-nameof": "^5.0.0",
-    "tsdx": "^0.14.1",
     "tslib": "^2.3.1",
     "typescript": "^4.4.2",
     "webpack": "^5.51.1",
@@ -108,13 +92,12 @@
     "jquery": "^3.6.0",
     "lodash": "^4.17.21",
     "merge": "^2.1.1",
-    // TODO move to oidc-client-ts
     "oidc-client": "^1.11.5",
     "react": "^17.0.2",
     "react-datepicker": "^4.4.0",
     "react-dom": "^17.0.2",
     "react-is": "^17.0.2",
-    "react-router-bootstrap": "^0.26.1",
+    "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^5.0.1",
     "reactstrap": "^9.0.2",
