--- a/Financier.Web.FinancialStatements/package.json
+++ b/Financier.Web.FinancialStatements/package.json
@@ -91,6 +91,7 @@
     "lodash": "^4.17.21",
     "merge": "^2.1.1",
     "oidc-client-ts": "^2.0.3",
+    "oidc-react": "^2.0.0",
     "react": "^17.0.2",
     "react-datepicker": "^4.4.0",
     "react-dom": "^17.0.2",
